--- a/ansokan.html
+++ b/ansokan.html
@@ -74,10 +74,6 @@
                             </ul>
                         </div>
                     </li>
-                    <li>
-                        <a href="fastigheter.html"
-                            class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Fastigheter</a>
-                    </li>
                     <button data-collapse-toggle="navbar-dropdown" type="button"
                         class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
                         aria-controls="navbar-dropdown" aria-expanded="false">
@@ -149,13 +145,8 @@
         <h2 class="text-4xl font-extrabold dark:text-white">Ansökan om båtplats</h2>
     </div>
     <div class="text-container">
-        <p class="my-4 text-lg text-gray-500">Föreningen inför nya båtregler inför båtsäsongen 2017. För att få båtplats
-            krävs en ansökan. Den ska vara föreningen tillhanda senast den 28 Februari 2022. Platstilldelning meddelas
-            under mars månad. Kopia på giltigt försäkringsbrev skall bifogas ansökan. Har du ännu inte tillgång till ett
-            sådant eller planerar att köpa ny båt kan du dock komplettera med detta senare.</p>
-        <p class="my-4 text-lg text-gray-500">Ansökan mejlas till info@skarpoborg.se eller postas till Skarpöborgs
-            fastighetsägareförening, c/o Eriksson Hallenheim, Gamla Skarpövägen 11 A, 185 91 Vaxholm. Frågor besvaras av
-            bryggfogden Torkel Sintorn med mejl till info@skarpoborg.se</p>
+        <p class="my-4 text-lg text-gray-500">Info om hur många parkeringsplatser som finns samt hur ofta parkeringsplatsen skottas, sandas, osv. Även info om hur kösystemet funkar.</p>
+        <p class="my-4 text-lg text-gray-500">Info om hur man ansöker om parkeringsplats</p>
         <a href="ansokan_batplats.pdf">
             <button
                 class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-green-400 to-blue-600 group-hover:from-green-400 group-hover:to-blue-600 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800">
