--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 		<div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
 			<a href="index.html" class="flex items-center flex-col">
 				<span
-					class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white block">Skarpöborg</span>
+					class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white block">BRF Ymer 2</span>
 				<span class="block text-sm font-medium text-gray-500 dark:text-gray-400"
-					style="margin-top: 5px;">Fastighetsägarförening</span>
+					style="margin-top: 5px;">Bostadsrättföreningen</span>
 			</a>
 			<button data-collapse-toggle="navbar-dropdown" type="button"
 				class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
@@ -38,7 +38,8 @@
 						<div id="dropdownNavbar"
 							class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
 							<ul class="py-2 text-sm text-gray-700 dark:text-gray-400"
-								aria-labelledby="dropdownLargeButton">								<li>
+								aria-labelledby="dropdownLargeButton">								
+								<li>
 									<a href="medlemmar.html"
 										class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Medlemmar</a>
 								</li>
@@ -79,7 +80,7 @@
 							class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
 							<li>
 								<button id="dropdownNavbarLink_2" data-dropdown-toggle="dropdownNavbar_2"
-									class="flex items-center justify-between w-full py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:w-auto dark:text-white md:dark:hover:text-blue-500 dark:focus:text-white dark:border-gray-700 dark:hover:bg-gray-700 md:dark:hover:bg-transparent">Bryggor
+									class="flex items-center justify-between w-full py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:w-auto dark:text-white md:dark:hover:text-blue-500 dark:focus:text-white dark:border-gray-700 dark:hover:bg-gray-700 md:dark:hover:bg-transparent">Parkering
 									<svg class="w-5 h-5 ml-1" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
 										xmlns="http://www.w3.org/2000/svg">
 										<path fill-rule="evenodd"
@@ -94,7 +95,7 @@
 										<li>
 											<a href="ansokan.html"
 												class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Ansökan
-												om båtplats</a>
+												om parkeringsplats</a>
 										</li>
 									</ul>
 								</div>
@@ -114,15 +115,12 @@
 </head>
 
 <body>
-	<img srcset="/docs/images/examples/image-1.jpg 1x, bild_framsida.jpg 2x" class="rounded-lg mx-auto "
+	<img srcset="/docs/images/examples/test.jpg 1x, test.jpg 2x" class="rounded-lg mx-auto "
 		alt="image description" style="margin-top: 80px; width: 800px;">
 
 	<div class="text-container">
-		<h2 class="text-3xl font-extrabold dark:text-white">Välkommen till Skarpöborgs Fastighetsägarförening </h2>
-		<p class="my-4 text-xl text-gray-500">Vi förvaltar och
-			underhåller tennisparken, badplatsen, bryggor, trappor, tennisbanan och sköter sommarvattnet. Vi
-			planerar för upprustning av båtbryggor, dansbana, badplatsen och tennisparken. Varje fastighetsägare inom Skarpöborgs villaområde kan
-			bli medlemmar i föreningen.</p>
+		<h2 class="text-3xl font-extrabold dark:text-white">Välkommen till BRF Ymer 2 </h2>
+		<p class="my-4 text-xl text-gray-500">Vi äger fastigheten och parkeringen runt om.</p>
 	</div>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.js"></script>
@@ -157,8 +155,8 @@
 	<div class="grid grid-cols-3 gap-6 shadow-2xl">
 		<figure
 			class="relative max-w-xs mx-auto mb-6 transition-all duration-300 cursor-pointer filter grayscale hover:grayscale-0">
-			<a href="foreningen.html">
-				<img class="rounded-lg" src="bild.jpg" alt="image description">
+			<a href="kontakt.html">
+				<img class="rounded-lg" src="test.jpg" alt="image description">
 			</a>
 			<figcaption class="absolute px-4 text-white bottom-6">
 				<p class="font-bold text-xl">Föreningen</p>
@@ -166,35 +164,17 @@
 		</figure>
 		<figure
 			class="relative max-w-xs mx-auto mb-6 transition-all duration-300 cursor-pointer filter grayscale hover:grayscale-0">
-			<a href="fastigheter.html">
-				<img class="rounded-lg" src="fastigheter.jpg" alt="image description">
+			<a href="parkering.html">
+				<img class="rounded-lg" src="test.jpg" alt="image description">
 			</a>
 			<figcaption class="absolute px-4 text-white bottom-6">
-				<p class="font-bold text-xl">Fastigheter</p>
-			</figcaption>
-		</figure>
-		<figure
-			class="relative max-w-xs mx-auto mb-6 transition-all duration-300 cursor-pointer filter grayscale hover:grayscale-0">
-			<a href="bryggor.html">
-				<img class="rounded-lg" src="bryggor.jpg" alt="image description">
-			</a>
-			<figcaption class="absolute px-4 text-white bottom-6">
-				<p class="font-bold text-xl">Bryggor</p>
-			</figcaption>
-		</figure>
-		<figure
-			class="relative max-w-xs mx-auto mb-6 transition-all duration-300 cursor-pointer filter grayscale hover:grayscale-0">
-			<a href="tennis.html">
-				<img class="rounded-lg" src="tennis.jpg" alt="image description">
-			</a>
-			<figcaption class="absolute px-4 text-white bottom-6">
-				<p class="font-bold text-xl">Tennis</p>
+				<p class="font-bold text-xl">Parkering</p>
 			</figcaption>
 		</figure>
 		<figure
 			class="relative max-w-xs mx-auto mb-6 transition-all duration-300 cursor-pointer filter grayscale hover:grayscale-0">
 			<a href="kontakt.html">
-				<img class="rounded-lg" src="styrelsen.jpg" alt="image description">
+				<img class="rounded-lg" src="test.jpg" alt="image description">
 			</a>
 			<figcaption class="absolute px-4 text-white bottom-6">
 				<p class="font-bold text-xl">Kontakt</p>
@@ -203,21 +183,13 @@
 		<figure
 			class="relative max-w-xs mx-auto mb-6 transition-all duration-300 cursor-pointer filter grayscale hover:grayscale-0">
 			<a href="nyheter.html">
-				<img class="rounded-lg" src="landskap.jpg" alt="image description">
+				<img class="rounded-lg" src="test.jpg" alt="image description">
 			</a>
 			<figcaption class="absolute px-4 text-white bottom-6">
 				<p class="font-bold text-xl">Nyheter</p>
 			</figcaption>
 		</figure>
 	</div>
-
-
-	<div class="text-container">
-		<h2 class="text-3xl font-extrabold dark:text-white">Status för crowdfunding av paviljongen:</h2>
-	</div>
-
-	<img srcset="/docs/images/examples/image-1.jpg 1x, staplar.png 2x" class="rounded-lg mx-auto "
-		alt="image description" style="margin-top: 80px; width: 800px;">
 
 </body>
 
@@ -229,8 +201,7 @@
 		</div>
 		<hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
 		<div class="sm:flex sm:items-center sm:justify-between">
-			<span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"> 2023 Copyright &copy; SKARPÖBORG
-				FASTIGHETSÄGARFÖRENING UPA | All rights reserved | producerad av Atle Johansson.</span>
+			<span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"> 2023 Copyright &copy; Bostadsrättsföreningen Ymer 2 | All rights reserved | producerad av Jonathan Howser.</span>
 			<div class="flex mt-4 space-x-6 sm:justify-center sm:mt-0">
 				<a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
 					<svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
@@ -255,7 +226,7 @@
 					</svg>
 					<span class="sr-only">Twitter page</span>
 				</a>
-				<a href="https://github.com/AtleJohansson"
+				<a href="https://github.com/JHowser"
 					class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
 					<svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 						<path fill-rule="evenodd"
@@ -264,7 +235,7 @@
 					</svg>
 					<span class="sr-only">GitHub account</span>
 				</a>
-				<a href="https://skarpoborg.se/" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
+				<a href="https://brfymer222.com/" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
 					<svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 						<path fill-rule="evenodd"
 							d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10c5.51 0 10-4.48 10-10S17.51 2 12 2zm6.605 4.61a8.502 8.502 0 011.93 5.314c-.281-.054-3.101-.629-5.943-.271-.065-.141-.12-.293-.184-.445a25.416 25.416 0 00-.564-1.236c3.145-1.28 4.577-3.124 4.761-3.362zM12 3.475c2.17 0 4.154.813 5.662 2.148-.152.216-1.443 1.941-4.48 3.08-1.399-2.57-2.95-4.675-3.189-5A8.687 8.687 0 0112 3.475zm-3.633.803a53.896 53.896 0 013.167 4.935c-3.992 1.063-7.517 1.04-7.896 1.04a8.581 8.581 0 014.729-5.975zM3.453 12.01v-.26c.37.01 4.512.065 8.775-1.215.25.477.477.965.694 1.453-.109.033-.228.065-.336.098-4.404 1.42-6.747 5.303-6.942 5.629a8.522 8.522 0 01-2.19-5.705zM12 20.547a8.482 8.482 0 01-5.239-1.8c.152-.315 1.888-3.656 6.703-5.337.022-.01.033-.01.054-.022a35.318 35.318 0 011.823 6.475 8.4 8.4 0 01-3.341.684zm4.761-1.465c-.086-.52-.542-3.015-1.659-6.084 2.679-.423 5.022.271 5.314.369a8.468 8.468 0 01-3.655 5.715z"
