--- a/styrelsen.html
+++ b/styrelsen.html
@@ -7,9 +7,9 @@
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <a href="index.html" class="flex items-center flex-col">
                 <span
-                    class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white block">Skarpöborg</span>
+                    class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white block">BRF Ymer</span>
                 <span class="block text-sm font-medium text-gray-500 dark:text-gray-400"
-                    style="margin-top: 5px;">Fastighetsägarförening</span>
+                    style="margin-top: 5px;">Täby kyrkby</span>
             </a>
             <button data-collapse-toggle="navbar-dropdown" type="button"
                 class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
@@ -80,7 +80,7 @@
                             class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
                             <li>
                                 <button id="dropdownNavbarLink_2" data-dropdown-toggle="dropdownNavbar_2"
-                                    class="flex items-center justify-between w-full py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:w-auto dark:text-white md:dark:hover:text-blue-500 dark:focus:text-white dark:border-gray-700 dark:hover:bg-gray-700 md:dark:hover:bg-transparent">Bryggor
+                                    class="flex items-center justify-between w-full py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:w-auto dark:text-white md:dark:hover:text-blue-500 dark:focus:text-white dark:border-gray-700 dark:hover:bg-gray-700 md:dark:hover:bg-transparent">Parkering
                                     <svg class="w-5 h-5 ml-1" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd"
@@ -93,26 +93,14 @@
                                     <ul class="py-2 text-sm text-gray-700 dark:text-gray-400"
                                         aria-labelledby="dropdownLargeButton">
                                         <li>
-                                            <a href="bryggor.html"
-                                                class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Om bryggor</a>
-                                        </li>
-                                        <li>
-                                            <a href="regler_batplatser.html"
-                                                class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Regler
-                                                för båtplatser 2023</a>
-                                        </li>
-                                        <li>
                                             <a href="ansokan.html"
                                                 class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Ansökan
-                                                om båtplats</a>
+                                                om parkeringsplats</a>
                                         </li>
                                     </ul>
                                 </div>
                             </li>
-                            <li>
-                                <a href="tennis.html"
-                                    class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Tennis</a>
-                            </li>
+                            
                             <li>
                                 <a href="kontakt.html"
                                     class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent text-black-700">Kontakt</a>
@@ -135,7 +123,7 @@
         <h2 class="text-4xl font-extrabold dark:text-white">Styrelsen</h2>
     </div>
     <div class="text-container">
-        <p class="my-4 text-lg text-gray-500">Föreningen har en styrelse som består av 8 ledamöter varav 4 också är ”fogde” över bryggor, sommarvatten, allmänna platser och tennis.</p>
+        <p class="my-4 text-lg text-gray-500">Föreningen har en styrelse som består av minst 3 ledamöter och en ordförande.</p>
     </div>
 
 
@@ -155,108 +143,108 @@
             <div class="grid gap-8 mb-6 lg:mb-16 md:grid-cols-2">
                 <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
                     <a href="#">
-                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="bild4.jpg"
+                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="test.jpg"
                             alt="Bonnie Avatar">
                     </a>
                     <div class="p-5">
                         <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
-                            <a href="#">Michael Billow</a>
+                            <a href="#">Person 1</a>
                         </h3>
                         <span class="text-gray-500 dark:text-gray-400">Ordförande</span>
-                        <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Telefon: 070-216 02 45</p>
+                        <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Telefon: 07x-xxx xx xx</p>
                         <ul class="flex space-x-4 sm:mt-0">
                         </ul>
                     </div>
                 </div>
                 <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
                     <a href="#">
-                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="bild1.jpg"
+                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="test.jpg"
                             alt="Jese Avatar">
                     </a>
                     <div class="p-5">
                         <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
-                            <a href="#">Hjalmar Litzén</a>
+                            <a href="#">Person 2</a>
                         </h3>
                         <span class="text-gray-500 dark:text-gray-400">Vice Ordförande</span>
-                        <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Telefon: 070-747 56 93</p>
+                        <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Telefon: 07x-xxx xx xx</p>
                     </div>
                 </div>
                 <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
                     <a href="#">
-                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="bild2.jpg"
+                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="test.jpg"
                             alt="Michael Avatar">
                     </a>
                     <div class="p-5">
                         <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
-                            <a href="#">Ann Charlotte Sjöstedt</a>
+                            <a href="#">Person 3</a>
                         </h3>
                         <span class="text-gray-500 dark:text-gray-400">Allmänna platser</span>
-                        <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Telefon: 070-677 62 82</p>
+                        <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Telefon: 07x-xxx xx xx</p>
                     </div>
                 </div>
                 <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
                     <a href="#">
-                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="bild3.jpg"
+                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="test.jpg"
                             alt="Sofia Avatar">
                     </a>
                     <div class="p-5">
                         <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
-                            <a href="#">Oscar Skog</a>
+                            <a href="#">Person 5</a>
                         </h3>
                         <span class="text-gray-500 dark:text-gray-400">Tennisfogde</span>
-                        <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Telefon: 070-266 39 68</p>
+                        <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Telefon: 07x-xxx xx xx</p>
                     </div>
                 </div>
                 <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
                     <a href="#">
-                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="bild6.jpg"
+                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="test.jpg"
                             alt="Sofia Avatar">
                     </a>
                     <div class="p-5">
                         <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
-                            <a href="#">Elisabet Brandberg</a>
+                            <a href="#">Person 8</a>
                         </h3>
                         <span class="text-gray-500 dark:text-gray-400">Kassör</span>
-                        <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Telefon: 070-760 22 21</p>
+                        <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Telefon: 07x-xxx xx xx</p>
                     </div>
                 </div>
                 <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
                     <a href="#">
-                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="bild5.jpg"
+                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="test.jpg"
                             alt="Sofia Avatar">
                     </a>
                     <div class="p-5">
                         <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
-                            <a href="#">Torkel Sintorn</a>
-                        </h3>
-                        <span class="text-gray-500 dark:text-gray-400">Bryggfogde</span>
-                        <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Telefon: 070-633 93 32</p>
-                    </div>
-                </div>
-                <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
-                    <a href="#">
-                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="nyheter.jpg"
-                            alt="Sofia Avatar">
-                    </a>
-                    <div class="p-5">
-                        <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
-                            <a href="#">Atle Johansson</a>
+                            <a href="#">Person 7</a>
                         </h3>
                         <span class="text-gray-500 dark:text-gray-400">Suppleant</span>
-                        <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Telefon: 070-209 91 31</p>
+                        <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Telefon: 07x-xxx xx xx</p>
                     </div>
                 </div>
                 <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
                     <a href="#">
-                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="styrelsen.jpg"
+                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="test.jpg"
                             alt="Sofia Avatar">
                     </a>
                     <div class="p-5">
                         <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
-                            <a href="#">Tua Ullerstam</a>
+                            <a href="#">Person 9</a>
                         </h3>
                         <span class="text-gray-500 dark:text-gray-400">Suppleant</span>
-                        <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Telefon:</p>
+                        <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Telefon: 07x-xxx xx xx</p>
+                    </div>
+                </div>
+                <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
+                    <a href="#">
+                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="test.jpg"
+                            alt="Sofia Avatar">
+                    </a>
+                    <div class="p-5">
+                        <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
+                            <a href="#">Person 10</a>
+                        </h3>
+                        <span class="text-gray-500 dark:text-gray-400">Suppleant</span>
+                        <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Telefon: 07x-xxx xx xx</p>
                     </div>
                 </div>
             </div>
@@ -275,7 +263,7 @@
         </div>
         <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
         <div class="sm:flex sm:items-center sm:justify-between">
-            <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"> 2023 Copyright &copy; SKARPÖBORG FASTIGHETSÄGARFÖRENING UPA | All rights reserved | producerad av Atle Johansson.</span>
+            <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"> 2023 Copyright &copy; Bostadsrättsföreningen Ymer 2 | All rights reserved | producerad av Jonathan Howser.</span>
             <div class="flex mt-4 space-x-6 sm:justify-center sm:mt-0">
                 <a href ="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
                     <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
@@ -300,21 +288,13 @@
                     </svg>
                     <span class="sr-only">Twitter page</span>
                 </a>
-                <a href="https://github.com/AtleJohansson" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
+                <a href="https://github.com/JHowser" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
                     <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                         <path fill-rule="evenodd"
                             d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z"
                             clip-rule="evenodd" />
                     </svg>
                     <span class="sr-only">GitHub account</span>
-                </a>
-                <a href="https://skarpoborg.se/" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
-                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-                        <path fill-rule="evenodd"
-                            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10c5.51 0 10-4.48 10-10S17.51 2 12 2zm6.605 4.61a8.502 8.502 0 011.93 5.314c-.281-.054-3.101-.629-5.943-.271-.065-.141-.12-.293-.184-.445a25.416 25.416 0 00-.564-1.236c3.145-1.28 4.577-3.124 4.761-3.362zM12 3.475c2.17 0 4.154.813 5.662 2.148-.152.216-1.443 1.941-4.48 3.08-1.399-2.57-2.95-4.675-3.189-5A8.687 8.687 0 0112 3.475zm-3.633.803a53.896 53.896 0 013.167 4.935c-3.992 1.063-7.517 1.04-7.896 1.04a8.581 8.581 0 014.729-5.975zM3.453 12.01v-.26c.37.01 4.512.065 8.775-1.215.25.477.477.965.694 1.453-.109.033-.228.065-.336.098-4.404 1.42-6.747 5.303-6.942 5.629a8.522 8.522 0 01-2.19-5.705zM12 20.547a8.482 8.482 0 01-5.239-1.8c.152-.315 1.888-3.656 6.703-5.337.022-.01.033-.01.054-.022a35.318 35.318 0 011.823 6.475 8.4 8.4 0 01-3.341.684zm4.761-1.465c-.086-.52-.542-3.015-1.659-6.084 2.679-.423 5.022.271 5.314.369a8.468 8.468 0 01-3.655 5.715z"
-                            clip-rule="evenodd" />
-                    </svg>
-                    <span class="sr-only">Dribbble account</span>
                 </a>
             </div>
         </div>
