--- a/arsmoten_och_protokoll.html
+++ b/arsmoten_och_protokoll.html
@@ -168,7 +168,7 @@
         <div class="grid shadow-2xl">
             <a href="arsredovisning23.pdf"
                 class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-md hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
-                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Årsredovisning 2022</h5>
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Årsredovisning 2023</h5>
                 <p class="font-normal text-gray-700 dark:text-gray-400">Denna ruta tar dig till PDF:en.</p>
             </a>
             <a href="prot_arsmote_2022.pdf"
@@ -176,9 +176,19 @@
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Protokoll årsstämman 2022</h5>
                 <p class="font-normal text-gray-700 dark:text-gray-400">Denna ruta tar dig till PDF:en.</p>
             </a>
+            <a href="arsredovisning22.pdf"
+                class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-md hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Årsredovisning 2022</h5>
+                <p class="font-normal text-gray-700 dark:text-gray-400">Denna ruta tar dig till PDF:en.</p>
+            </a>
             <a href="prot_arsmote_2021.pdf"
                 class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-md hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Protokoll årsstämman 2021</h5>
+                <p class="font-normal text-gray-700 dark:text-gray-400">Denna ruta tar dig till PDF:en.</p>
+            </a>
+            <a href="arsredovisning2021.pdf"
+                class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-md hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Årsredovisning 2021</h5>
                 <p class="font-normal text-gray-700 dark:text-gray-400">Denna ruta tar dig till PDF:en.</p>
             </a>
             <a href="prot_arsmote_2020.pdf"
@@ -186,9 +196,19 @@
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Protokoll årsstämman 2020</h5>
                 <p class="font-normal text-gray-700 dark:text-gray-400">Denna ruta tar dig till PDF:en.</p>
             </a>
+            <a href="arsredovisning2020.pdf"
+                class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-md hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Årsredovisning 2020</h5>
+                <p class="font-normal text-gray-700 dark:text-gray-400">Denna ruta tar dig till PDF:en.</p>
+            </a>
             <a href="prot_arsmote_2019.pdf"
                 class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-md hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Protokoll årsstämman 2019</h5>
+                <p class="font-normal text-gray-700 dark:text-gray-400">Denna ruta tar dig till PDF:en.</p>
+            </a>
+            <a href="arsredovisning2019.pdf"
+                class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-md hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Årsredovisning 2019</h5>
                 <p class="font-normal text-gray-700 dark:text-gray-400">Denna ruta tar dig till PDF:en.</p>
             </a>
             </a>
