--- a/kontakt.html
+++ b/kontakt.html
@@ -191,8 +191,8 @@
                         <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
                             <a href="#">Person Fem</a>
                         </h3>
-                        <span class="text-gray-500 dark:text-gray-400">Kassör</span>
-                        <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Telefon: 070-760 22 21</p>
+                        <span class="text-gray-500 dark:text-gray-400">Valberedningen</span>
+                        <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Telefon: 07x-xxx xx xx</p>
                     </div>
                 </div>
                 <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
@@ -203,32 +203,6 @@
                     <div class="p-5">
                         <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
                             <a href="#">Person Sex</a>
-                        </h3>
-                        <span class="text-gray-500 dark:text-gray-400">Bryggfogde</span>
-                        <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Telefon: 07x-xxx xx xx</p>
-                    </div>
-                </div>
-                <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
-                    <a href="#">
-                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="test.jpg"
-                            alt="Sofia Avatar">
-                    </a>
-                    <div class="p-5">
-                        <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
-                            <a href="#">Person Sju</a>
-                        </h3>
-                        <span class="text-gray-500 dark:text-gray-400">Suppleant</span>
-                        <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Telefon: 07x-xxx xx xx</p>
-                    </div>
-                </div>
-                <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
-                    <a href="#">
-                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="test.jpg"
-                            alt="Sofia Avatar">
-                    </a>
-                    <div class="p-5">
-                        <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
-                            <a href="#">Person Åtta</a>
                         </h3>
                         <span class="text-gray-500 dark:text-gray-400">Suppleant</span>
                         <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Telefon: 07x-xxx xx xx</p>
