--- a/nyheter.html
+++ b/nyheter.html
@@ -150,22 +150,9 @@
 	</style>
 
 	<div class="grid shadow-2xl">
-		<a href="arsredovisning2021.pdf"
+		<a href="nyhet_nummer_1.pdf"
 			class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-md hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
-			<h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Årsredovisning
-				räkenskapsåret 2021</h5>
-			<p class="font-normal text-gray-700 dark:text-gray-400">Denna ruta tar dig till PDF:en.</p>
-		</a>
-		<a href="arsredovisning2021.pdf"
-			class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-md hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
-			<h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Årsredovisning
-				räkenskapsåret 2021</h5>
-			<p class="font-normal text-gray-700 dark:text-gray-400">Denna ruta tar dig till PDF:en.</p>
-		</a>
-		<a href="arsredovisning2021.pdf"
-			class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-md hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
-			<h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Årsredovisning
-				räkenskapsåret 2021</h5>
+			<h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Spännande nyhet!</h5>
 			<p class="font-normal text-gray-700 dark:text-gray-400">Denna ruta tar dig till PDF:en.</p>
 		</a>
 		</a>
