--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
 
 	<div class="text-container">
 		<h2 class="text-3xl font-extrabold dark:text-white">Välkommen till BRF Ymer 2 </h2>
-		<p class="my-4 text-xl text-gray-500">Vi äger fastigheten och parkeringen runt om.</p>
+		<p class="my-4 text-xl text-gray-500">Vi är en bostadsrättsförening i Täby Kyrkby.</p>
 	</div>
-
+ 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.js"></script>
 
 	<style>
