--- a/styrelsen.html
+++ b/styrelsen.html
@@ -137,7 +137,7 @@
             <div class="grid gap-8 mb-6 lg:mb-16 md:grid-cols-2">
                 <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
                     <a href="#">
-                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="test.jpg"
+                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="Anonymous profile picture.pdf"
                             alt="Bonnie Avatar">
                     </a>
                     <div class="p-5">
@@ -152,7 +152,7 @@
                 </div>
                 <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
                     <a href="#">
-                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="test.jpg"
+                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="Anonymous profile picture.pdf"
                             alt="Jese Avatar">
                     </a>
                     <div class="p-5">
@@ -165,7 +165,7 @@
                 </div>
                 <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
                     <a href="#">
-                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="test.jpg"
+                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="Anonymous profile picture.pdf"
                             alt="Michael Avatar">
                     </a>
                     <div class="p-5">
@@ -178,7 +178,7 @@
                 </div>
                 <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
                     <a href="#">
-                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="test.jpg"
+                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="Anonymous profile picture.pdf"
                             alt="Sofia Avatar">
                     </a>
                     <div class="p-5">
@@ -191,7 +191,7 @@
                 </div>
                 <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
                     <a href="#">
-                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="test.jpg"
+                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="Anonymous profile picture.pdf"
                             alt="Sofia Avatar">
                     </a>
                     <div class="p-5">
@@ -204,7 +204,7 @@
                 </div>
                 <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
                     <a href="#">
-                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="test.jpg"
+                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="Anonymous profile picture.pdf"
                             alt="Sofia Avatar">
                     </a>
                     <div class="p-5">
@@ -217,7 +217,7 @@
                 </div>
                 <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
                     <a href="#">
-                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="test.jpg"
+                        <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg" src="Anonymous profile picture.pdf"
                             alt="Sofia Avatar">
                     </a>
                     <div class="p-5">
