--- a/index.html
+++ b/index.html
@@ -109,8 +109,23 @@
 </head>
 
 <body>
-	<img srcset="/docs/images/examples/test.jpg 1x, test.jpg 2x" class="rounded-lg mx-auto "
-		alt="image description" style="margin-top: 80px; width: 800px;">
+	<div class="column">
+		
+	
+		
+	</div>
+	<div class="column">
+		
+	
+		<img srcset="/docs/images/examples/test.jpg 1x, test.jpg 2x" class="rounded-lg mx-auto "
+			alt="image description" style="margin-top: 80px; width: 800px;">
+	</div>
+	<div class="column">
+		
+	
+		
+	</div>
+	
 
 	<div class="text-container">
 		<h2 class="text-3xl font-extrabold dark:text-white">Välkommen till BRF Ymer 2 </h2>
