--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <body>
 	<div class="column">
 		
-	
+		<p>Här ska det stå något</p>
 		
 	</div>
 	<div class="column">
@@ -122,7 +122,7 @@
 	</div>
 	<div class="column">
 		
-	
+		<p>Här ska det stå något mer</p>
 		
 	</div>
 	
