--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 	<div class="column">
 		
 	
-		<img srcset="/docs/images/examples/test.jpg 1x, test.jpg 2x" class="rounded-lg mx-auto "
-			alt="image description" style="margin-top: 80px; width: 800px;">
+		<img srcset="/docs/images/examples/test.jpg 1x, test.jpg 2x" 
+			alt="image description" style="margin-top: 80px; width: 200px;">
 	</div>
 	<div class="column">
 		
