--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 	<div class="column">
 		
 	
-		<img srcset="/docs/images/examples/test.jpg 1x, test.jpg 2x" 
+		<img srcset="/docs/images/examples/test.jpg 1x, Anonymous profile picture.pdf 2x" 
 			alt="image description" style="margin-top: 80px; width: 200px;">
 	</div>
 	<div class="column">
