--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 </head>
 
 <body>
+	<div class="row">
 	<div class="column">
 		
 		<p>Här ska det stå något</p>
@@ -124,6 +125,7 @@
 		
 		<p>Här ska det stå något mer</p>
 		
+	</div>
 	</div>
 	
 
