--- a/index.html
+++ b/index.html
@@ -110,18 +110,18 @@
 
 <body>
 	<div class="row">
-	<div class="column">
+	<div class="column1">
 		
 		<p>Här ska det stå något</p>
 		
 	</div>
-	<div class="column">
+	<div class="column2">
 		
 	
 		<img srcset="/docs/images/examples/test.jpg 1x, Anonymous profile picture.pdf 2x" 
 			alt="image description" style="margin-top: 80px; width: 200px;">
 	</div>
-	<div class="column">
+	<div class="column3">
 		
 		<p>Här ska det stå något mer</p>
 		
