--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.css" rel="stylesheet" />
+	<link href="index.css" rel="stylesheet" />
 	<nav class="bg-white border-gray-200 dark:bg-gray-900 dark:border-gray-700">
 		<div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
 			<a href="index.html" class="flex items-center flex-col">
