--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 	<div class="column2">
 		
 	
-		<img srcset="/docs/images/examples/test.jpg 1x, Anonymous profile picture.pdf 2x" 
+		<img src="test.jpg 1x, Anonymous profile picture.pdf 2x" 
 			alt="image description" style="margin-top: 80px; width: 200px;">
 	</div>
 	<div class="column3">
