--- a/index.html
+++ b/index.html
@@ -111,8 +111,10 @@
 <body>
 	<div class="row">
 	<div class="column1">
-		
-		<p>Här ska det stå något</p>
+		<p> Tänk på vem du släpper in i porten. Om någon vill "slinka" in fråga vem de ska till eller vad de ska göra. 
+Vi har fått information om att det under dagtid förekommit att någon tagit i dörrhandtagen och kollat om dörren är öppen. 
+
+Inget har hänt men vi vill göra er observanta på detta, det bästa är att vi hjälps åt genom att fråga de vi inte känner igen.</p>
 		
 	</div>
 	<div class="column2">
