--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ Inget har hänt men vi vill göra er observanta på detta, det bästa är att vi
 		<figure
 			class="relative max-w-xs mx-auto mb-6 transition-all duration-300 cursor-pointer filter grayscale hover:grayscale-0">
 			<a href="kontakt.html">
-				<img class="rounded-lg" src="test.jpg" alt="image description">
+				<img class="rounded-lg" src="Blå.pdf" alt="image description">
 			</a>
 			<figcaption class="absolute px-4 text-white bottom-6">
 				<p class="font-bold text-xl">Föreningen</p>
@@ -178,7 +178,7 @@ Inget har hänt men vi vill göra er observanta på detta, det bästa är att vi
 		<figure
 			class="relative max-w-xs mx-auto mb-6 transition-all duration-300 cursor-pointer filter grayscale hover:grayscale-0">
 			<a href="parkering.html">
-				<img class="rounded-lg" src="test.jpg" alt="image description">
+				<img class="rounded-lg" src="Blå.pdf" alt="image description">
 			</a>
 			<figcaption class="absolute px-4 text-white bottom-6">
 				<p class="font-bold text-xl">Parkering</p>
@@ -187,7 +187,7 @@ Inget har hänt men vi vill göra er observanta på detta, det bästa är att vi
 		<figure
 			class="relative max-w-xs mx-auto mb-6 transition-all duration-300 cursor-pointer filter grayscale hover:grayscale-0">
 			<a href="kontakt.html">
-				<img class="rounded-lg" src="test.jpg" alt="image description">
+				<img class="rounded-lg" src="Blå.pdf" alt="image description">
 			</a>
 			<figcaption class="absolute px-4 text-white bottom-6">
 				<p class="font-bold text-xl">Kontakt</p>
@@ -196,7 +196,7 @@ Inget har hänt men vi vill göra er observanta på detta, det bästa är att vi
 		<figure
 			class="relative max-w-xs mx-auto mb-6 transition-all duration-300 cursor-pointer filter grayscale hover:grayscale-0">
 			<a href="nyheter.html">
-				<img class="rounded-lg" src="test.jpg" alt="image description">
+				<img class="rounded-lg" src="Blå.pdf" alt="image description">
 			</a>
 			<figcaption class="absolute px-4 text-white bottom-6">
 				<p class="font-bold text-xl">Nyheter</p>
