--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ Inget har hänt men vi vill göra er observanta på detta, det bästa är att vi
 	<div class="column2">
 		
 	
-		<img src="test.jpg 1x, Anonymous profile picture.pdf 2x" 
+		<img src="Blå.jpg" 
 			alt="image description" style="margin-top: 80px; width: 200px;">
 	</div>
 	<div class="column3">
