--- a/arsmoten_och_protokoll.html
+++ b/arsmoten_och_protokoll.html
@@ -165,6 +165,11 @@
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Årsredovisning 2023</h5>
                 <p class="font-normal text-gray-700 dark:text-gray-400">Denna ruta tar dig till PDF:en.</p>
             </a>
+            <a href="extrastämma23.pdf"
+                class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-md hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Extrainsatt föreningsstämma 2023</h5>
+                <p class="font-normal text-gray-700 dark:text-gray-400">Denna ruta tar dig till PDF:en.</p>
+            </a>
             <a href="prot_arsmote_2022.pdf"
                 class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-md hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Protokoll årsstämman 2022</h5>
