--- a/styrelsen.html
+++ b/styrelsen.html
@@ -119,7 +119,10 @@
     <div class="text-container">
         <p class="my-4 text-lg text-gray-500">Föreningen har en styrelse som består av minst 3 ledamöter och en ordförande.</p>
     </div>
-
+    <div>
+        Ordförande: Conny
+    </div>
+    <div> Styrelseledamöter: <br>Jonathan <br>Andreas<br>Mark</div>
 
     <style>
         .text-container {
