--- a/foreningens_stadgar.html
+++ b/foreningens_stadgar.html
@@ -44,7 +44,7 @@
                                 <li>
                                     <a href="foreningens_stadgar.html"
                                         class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Föreningens
-                                        stadgar</a>
+                                        stadgar och ordningsregler</a>
                                 </li>
                                 <li>
                                     <a href="arsmoten_och_protokoll.html"
@@ -87,15 +87,7 @@
                                     class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
                                     <ul class="py-2 text-sm text-gray-700 dark:text-gray-400"
                                         aria-labelledby="dropdownLargeButton">
-                                        <li>
-                                            <a href="parkering.html"
-                                                class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Om parkering</a>
-                                        </li>
-                                        <li>
-                                            <a href="regler_parkeringsplatser.html"
-                                                class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Regler
-                                                för parkeringsplatser</a>
-                                        </li>
+                                        
                                         <li>
                                             <a href="ansokan.html"
                                                 class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Ansökan
@@ -105,7 +97,7 @@
                                 </div>
                             </li>
                             <li>
-                                <a href="kontakt.html"
+                                <a href="styrelsen.html"
                                     class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent text-black-700">Kontakt</a>
                             </li>
                             <li>
@@ -127,9 +119,10 @@
     </div>
     <div class="text-container">
         <p class="my-4 text-lg text-gray-500">INFO OM STADGARNA</p>
+        <h3 class="text-3xl font-extrabold dark:text-white">Stadgar</h3>
         <p class ="my-4 text-lg text-gray-500">flerstadgar</p>
-        <h3 class="text-3xl font-extrabold dark:text-white">flerstadgar</h3>
-        <p class ="my-4 text-lg text-gray-500">flerstadgar</p>
+        <h3 class="text-3xl font-extrabold dark:text-white">Ordningsregler</h3>
+        <p class ="my-4 text-lg text-gray-500">ordningsreglerna</p>
     </div>
 
     <style>
