--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 								<li>
 									<a href="foreningens_stadgar.html"
 										class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Föreningens
-										stadgar</a>
+										stadgar och ordningsregler</a>
 								</li>
 								<li>
 									<a href="arsmoten_och_protokoll.html"
@@ -95,7 +95,7 @@
 								</div>
 							</li>
 							<li>
-								<a href="kontakt.html"
+								<a href="styrelsen.html"
 									class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Kontakt</a>
 							</li>
 							<li>
@@ -111,21 +111,16 @@
 <body>
 	<div class="row">
 	<div class="column1">
-		<p> Tänk på vem du släpper in i porten. Om någon vill "slinka" in fråga vem de ska till eller vad de ska göra. 
-Vi har fått information om att det under dagtid förekommit att någon tagit i dörrhandtagen och kollat om dörren är öppen. 
-
-Inget har hänt men vi vill göra er observanta på detta, det bästa är att vi hjälps åt genom att fråga de vi inte känner igen.</p>
-		
+		<p> </p>
 	</div>
 	<div class="column2">
 		
 	
-		<img src="Blå.jpg" 
-			alt="image description" style="margin-top: 80px; width: 200px;">
+		
 	</div>
 	<div class="column3">
 		
-		<p>Här ska det stå något mer</p>
+		<p></p>
 		
 	</div>
 	</div>
