--- a/ansokan.html
+++ b/ansokan.html
@@ -115,20 +115,45 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.js"></script>
 
     <div class="text-container">
-        <h2 class="text-4xl font-extrabold dark:text-white">Ansökan om parkeringsplats</h2>
+        <h2 class="text-3xl font-extrabold dark:text-white">Dokument för ansökningar</h2>
     </div>
     <div class="text-container">
-        <p class="my-4 text-lg text-gray-500">Info om hur många parkeringsplatser som finns samt hur ofta parkeringsplatsen skottas, sandas, osv. Även info om hur kösystemet funkar.</p>
-        <p class="my-4 text-lg text-gray-500">Info om hur man ansöker om parkeringsplats</p>
-        <a href="ansokan_parkeringsplats.pdf">
-            <button
-                class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-green-400 to-blue-600 group-hover:from-green-400 group-hover:to-blue-600 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800">
-                <span
-                    class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
-                    PDF för ansökan om parkeringsplats
-                </span>
-            </button>
-        </a>
+        <p class="my-4 text-lg text-gray-500">Nedan finns dokument som ska användas vid ansökan av olika slag, både för föreningens medlemmar, samt hyresgäster</p>
+        <p class="my-6 text-sm text-black-500">Fyll i det relevanta dokumentet digitalt och skicka till brfymer2@outlook.com, eller skriv ut och lägg i brevlådan XXXXX (måste lägga till mer info här), så behandlar styrelsen ditt ärende så fort vi kan.</p>
+        <ul>   
+            <a href="ansokan_parkeringsplats.pdf">
+                <button
+                    class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-green-400 to-blue-600 group-hover:from-green-400 group-hover:to-blue-600 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800">
+                    <span
+                        class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
+                        PDF för ansökan om parkeringsplats
+                    </span>
+                </button>
+            </a>
+        </ul>
+        <ul>
+            <a href="ansokan_renovering_bostadsrätt.pdf">
+                <button
+                    class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-green-400 to-blue-600 group-hover:from-green-400 group-hover:to-blue-600 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800">
+                    <span
+                        class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
+                        Ansökan om att renovera bostadsrätt
+                    </span>
+                </button>
+            </a>
+        </ul>
+        <ul>
+            <a href="ansokan_upplåta_bostadsrätt.pdf">
+                <button
+                    class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-green-400 to-blue-600 group-hover:from-green-400 group-hover:to-blue-600 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800">
+                    <span
+                        class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
+                        Ansökan att hyra ut bostdsrätt
+                    </span>
+                </button>
+            </a>
+        </ul>
+    </div>
         <style>
             .text-container {
                 margin-left: 100px;
