--- a/foreningens_stadgar.html
+++ b/foreningens_stadgar.html
@@ -117,14 +117,14 @@
     <div class="text-container">
         <h2 class="text-4xl font-extrabold dark:text-white">Föreningens stadgar</h2>
     </div>
-    <div class="text-container">
-        <p class="my-4 text-lg text-gray-500">INFO OM STADGARNA</p>
-        <h3 class="text-3xl font-extrabold dark:text-white">Stadgar</h3>
-        <p class ="my-4 text-lg text-gray-500">flerstadgar</p>
-        <h3 class="text-3xl font-extrabold dark:text-white">Ordningsregler</h3>
-        <p class ="my-4 text-lg text-gray-500">ordningsreglerna</p>
+    <div>
+        <a href="StadgarBRFYmer2.pdf" 
+            class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-md hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Stadgar BRF Ymer 2</h5>
+            <p class="font-normal text-gray-700 dark:text-gray-400">Denna ruta tar dig till PDF:en.</p>
+        </a>
     </div>
-
+    
     <style>
         .citat-container {
             margin-left: 200px;
