--- a/foreningens_stadgar.html
+++ b/foreningens_stadgar.html
@@ -117,7 +117,7 @@
     <div class="text-container">
         <h2 class="text-4xl font-extrabold dark:text-white">Föreningens stadgar</h2>
     </div>
-    <div>
+    <div class="grid shadow-2xl">
         <a href="StadgarBRFYmer2.pdf" 
             class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-md hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
             <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Stadgar BRF Ymer 2</h5>
