--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <body>
 	<div class="row">
 	<div class="column1">
-		<p> </p>
+		<p> Vi har 40 lägenheter i storlekar från 38 kvm upp till 100 kvm. </p>
 	</div>
 	<div class="column2">
 		
