--- a/kontakt.html
+++ b/kontakt.html
@@ -118,8 +118,8 @@
                 <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Kontakt &
                     Styrelsen</h2>
                 <p class="font-light text-gray-500 lg:mb-16 sm:text-xl dark:text-gray-400">Nedan finner du hela
-                    styrelsen, deras telefonnummer och respektive roll i styrelsen. Den allmänna mailadressen för att nå
-                    styrelsen är brfymer@gmail.com </p>
+                    styrelsen och respektive roll i styrelsen. Den allmänna mailadressen för att nå
+                    styrelsen är brfymer2@outlook.com </p>
             </div>
         </div>
     </section>
